Changelog for CmdArgs

0.10.2
    Relax upper bounds to be GHC 7.7 compatible
0.10.1
    #569, set the test program to off by default
	Complete revamp of cmdargs-browser, far better Javascript
    Add a missing case for Helper marshalling FlagNone
0.10
    Revert to 0.9.6, including modeExpandAt
0.9.7
    Revert to 0.9.5, to fix up PVP breakage
0.9.6
    #539, hopefully more fixes to compiling in profile mode
    #522, add modeExpandAt and noAtExpand annotation
    #522, don't @expand after --
0.9.5
    Don't specify TH extension unless quotation is true
0.9.4
    #539, specify the TH extension in the Cabal file
    Allow transformers 0.3.*
    Correct copyright in license and cabal file
0.9.3
    Add expandArgsAt and support for @ flag file directives
0.9.2
    Don't build the test program if quotation is turned off
0.9.1
    Improve the documentation for the Explicit module
    #433, propagate groupname on modes in the Implicit code
0.9
    #467, add completions for people running bash
    #334, add a Quote module, to write pure in the impure syntax
    #482, fix the sample in Explicit, don't use def
    #461, fix the translation for enum/enum_
    Make showHelp take an argument for the prefix bits
    Add Helper interface, and initial cmdargs-browser code
    Add splitArgs/joinArgs
0.8
    #450, redo the manual generator so Maker example is not cut off
    Support all the types in Data.Int/Data.Word
    Make modeArgs take a list of arguments as well
0.7
    No changes, just a version bump to allow requiring the GHC fix
0.6.10
    Change the annotate module to cope better with GHC's CSE
0.6.9
    #422, support newtype value as the underlying type
0.6.8
    Allow versionArgs [summary] to override --version
    Improve the documentation surrounding opt
    Add modeReform to Mode
    Add modeEmpty, to construct blank Mode values
    Improve the documentation surrounding pure annotations.
0.6.7
    #395, don't put two newlines after --help or --version
0.6.6